Bug on mobile fixed

--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ header.card {
     }
     .card {
         position: relative;
-        width: calc(100vw - 15px);
+        width: 100vw;
         left: 0;
     }
 }
